--- a/public/material/css/material-dashboard.css
+++ b/public/material/css/material-dashboard.css
@@ -6460,7 +6460,7 @@ button.close {
 }
 
 .bg-primary {
-  background-color: #2196f3 !important;
+  background-color: #204ece !important;
 }
 
 a.bg-primary:hover,
